--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -22,12 +21,12 @@ img {
   height: auto;
   border-radius: 20px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
-  transition: transform 0.3s ease; /* Aggiunta transizione per l'effetto */
+  margin-bottom: 10px;
+  transition: transform 0.3s ease;
 }
 
 img:hover {
-  transform: scale(1.1); /* Ingrandisce leggermente il logo */
+  transform: scale(1.1);
 }
 
 h1 {
@@ -82,6 +81,7 @@ button {
 button:hover {
   background-color: #00a67e;
 }
+
 #logo {
   transition: transform 0.6s ease, margin-left 0.6s ease;
   cursor: pointer;
@@ -90,4 +90,20 @@ button:hover {
 .animato {
   transform: rotate(360deg) scale(0.2);
   margin-left: -40vw;
+}
+
+#messaggio-download {
+  margin-top: 10px;
+  font-size: 18px;
+  color: #00ffb3;
+  font-weight: bold;
+  transition: opacity 0.5s ease;
+}
+
+.nascosto {
+  opacity: 0;
+}
+
+.visibile {
+  opacity: 1;
 }
